--- a/suacodebackend/.env
+++ b/suacodebackend/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=0x!b#(1*cd73w$&azzc6p+essg7v=g80ls#z&xcx*mpemx&@9$
+SECRET_KEY=django-insecure-_##il-ylslt_-$a+^)*d*(lttbjw-y$e719#1t%)m(-pc%7v6@
 DEBUG=False
 DATABASE_NAME=db_name
 DATABASE_USER=db_user
