--- a/suacodebackend/.env
+++ b/suacodebackend/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=django-insecure-_##il-ylslt_-$a+^)*d*(lttbjw-y$e719#1t%)m(-pc%7v6@
 DEBUG=False
-DATABASE_NAME=db_name
-DATABASE_USER=db_user
-DATABASE_PASSWORD=password
+DATABASE_NAME=notesdb
+DATABASE_USER=frank
+DATABASE_PASSWORD=!@agfreckles?/
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
