--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 dj-database-url==1.2.0
 Django==4.1.4
+django-cors-headers==3.13.0
 django-environ==0.9.0
 django-filter==22.1
 djangorestframework==3.14.0
